chore(components): more Container use

--- a/src/docs/General/Welcome.mdx
+++ b/src/docs/General/Welcome.mdx
@@ -1,3 +1,6 @@
+import Container from '../../components/Container.tsx';
+
+<Container>
 <div align="center">
 
 <img src="/src/assets/josh.svg" />
@@ -43,3 +46,5 @@ Josh makes it extremely easy and simple to get a project up and running as quick
 ### When NOT to use Josh?
 
 If you think you can do better, if you already know database interactions or ORMs, or you don't trust database wrappers made by other people... Well, in any of those cases I don't even know why you're on this page, go on now, `git out --of:here` and go make some good applications, you don't need this!
+
+</ Container>
