--- a/src/docs/Guide/GettingStarted.mdx
+++ b/src/docs/Guide/GettingStarted.mdx
@@ -1,3 +1,7 @@
+import Container from '../../components/Container.tsx';
+
+<Container>
+
 # Getting Started with Josh
 
 To use Josh, you need to install `@joshdb/core`. You can do this by running the following command:
@@ -52,3 +56,5 @@ const josh = new Josh<User>({ name: 'name' });
 
 await josh.init();
 ```
+
+</ Container>
