--- a/src/docs/General/Welcome.mdx
+++ b/src/docs/General/Welcome.mdx
@@ -1,19 +1,3 @@
-import Container from '../../components/Container.tsx';
-
-<Container>
-<div align="center">
-
-<img src="/src/assets/josh.svg" />
-
-[![NPM version](https://img.shields.io/npm/v/@joshdb/core?color=crimson&label=NPM%20Version&logo=npm)](https://www.npmjs.com/package/@joshdb/core)
-[![NPM downloads](https://img.shields.io/npm/dt/@joshdb/core.svg?label=NPM%20Downloads&logo=npm)](https://www.npmjs.com/package/@joshdb/core)
-
-[![Support Server](https://discord.com/api/guilds/298508738623438848/embed.png?style=banner2)](https://discord.gg/N7ZKH3P)
-
-</div>
-
----
-
 ## Description
 
 A simple, effective, and efficient database wrapper.
@@ -26,7 +10,7 @@ A simple, effective, and efficient database wrapper.
 
 ## Installation
 
-```sh
+```bash
 # With NPM
 npm install @joshdb/core@next
 # Or with Yarn
@@ -46,5 +30,3 @@ Josh makes it extremely easy and simple to get a project up and running as quick
 ### When NOT to use Josh?
 
 If you think you can do better, if you already know database interactions or ORMs, or you don't trust database wrappers made by other people... Well, in any of those cases I don't even know why you're on this page, go on now, `git out --of:here` and go make some good applications, you don't need this!
-
-</ Container>
