--- a/src/docs/Guide/GettingStarted.mdx
+++ b/src/docs/Guide/GettingStarted.mdx
@@ -1,7 +1,3 @@
-import Container from '../../components/Container.tsx';
-
-<Container>
-
 # Getting Started with Josh
 
 To use Josh, you need to install `@joshdb/core`. You can do this by running the following command:
@@ -32,7 +28,7 @@ await josh.init();
 ### ESM
 
 ```javascript
-const { Josh } from '@joshdb/core';
+import { Josh } from '@joshdb/core';
 
 const josh = new Josh({ name: 'name' });
 
@@ -44,7 +40,7 @@ await josh.init();
 If you'd like to define the stored value type, then you can use [generics](https://www.typescriptlang.org/docs/handbook/2/generics.html).
 
 ```typescript
-import { Josh } from '@joshdb./core';
+import { Josh } from '@joshdb/core';
 
 interface User {
   name: string;
@@ -56,5 +52,3 @@ const josh = new Josh<User>({ name: 'name' });
 
 await josh.init();
 ```
-
-</ Container>
