feat(docs): add sidebar and styling

--- a/src/docs/Guide/CreatingMiddleware.mdx
+++ b/src/docs/Guide/CreatingMiddleware.mdx
@@ -91,7 +91,7 @@ josh.use(new MyMiddleware());
 
 ## Using Functions
 
-If you are using functions then you will have to identify when your methods will run by passing a [`Josh.UseMiddlewareOptions`] object to the [`Josh.use()`] method.
+If you are using functions then you will have to identify when your methods will run by passing a `Josh.UseMiddlewareOptions` object to the `Josh.use()` method.
 
 ### CommonJS
 
