--- a/src/docs/Guide/UsingProviders.mdx
+++ b/src/docs/Guide/UsingProviders.mdx
@@ -2,8 +2,6 @@
 
 What is a provider? A Provider is simply a layer between [`Josh`](https://github.com/josh-development/core/blob/main/src/lib/structures/Josh.ts) and a database or any other backend you use to store your data. Each provider receives a payload from every method you use in your instance and returns a modified version of it.
 
-## Basic Usage
-
 Providers can be installed separately from Josh using your package manager (e.g. npm). You can also make your own provider by extending the exported [`JoshProvider`](https://github.com/josh-development/core/blob/main/src/lib/structures/JoshProvider.ts) class.
 
 In the example below we will use the default in-memory provider which uses the Node.js native [`Map`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map) class.
@@ -33,7 +31,7 @@ await josh.init();
 If you'd like to define the stored value type, then you can use [generics](https://www.typescriptlang.org/docs/handbook/2/generics.html).
 
 ```typescript
-import { Josh, MapProvider } from '@joshdb./core';
+import { Josh, MapProvider } from '@joshdb/core';
 
 interface User {
   name: string;
