--- a/src/docs/Guide/middleware/CreatingMiddleware.mdx
+++ b/src/docs/Guide/middleware/CreatingMiddleware.mdx
@@ -1,10 +1,4 @@
-# Middleware
-
-## What is middleware?
-
-Middleware are simply a class that has methods that can be configured to run before and after providers received payloads from [`Josh`](https://github.com/josh-development/core/blob/main/src/lib/structures/Josh.ts).They make it possible to implement functionalities like [`AutoEnsure`](https://github.com/josh-development/core/blob/main/src/middlewares/CoreAutoEnsure.ts).
-
-## Creating Middleware
+# Creating Middleware
 
 There are currently two ways to create middleware:
 
