--- a/src/docs/Guide/ContributingYourOwnProvider.mdx
+++ b/src/docs/Guide/ContributingYourOwnProvider.mdx
@@ -1,3 +1,5 @@
+import { Codeblock, CodeblockContent, CodeblockIndex } from '../../../components/Codeblock.tsx';
+
 # Contributing your own provider for Josh
 
 This page will help guide you through the process of creating and contributing your own provider to the Josh database wrapper project. We are glad that you would like to contribute to our amazing project. Please follow these instructions carefully to help ensure your contributions are accepted.
@@ -10,15 +12,13 @@ To be able to contribute your own provider for this project you are required to 
 
 Please notice that this repository uses Yarn Workspaces to manage our packages and code-space. This makes it a requirement to contribute and use this repository.
 
-```sh
-# Initiate Yarn in this repository.
+```bash
 yarn
 ```
 
-We have created a script to create your provider workspace for you so you don't have too much trouble getting started.
+We have created a script to create your provider workspace, so you don't have too much trouble getting started.
 
-```sh
-# Follow the prompts carefully using this script.
+```bash
 yarn generate
 ```
 
