fix(guide): broken link

--- a/src/docs/Guide/providers/ContributingYourOwnProvider.mdx
+++ b/src/docs/Guide/providers/ContributingYourOwnProvider.mdx
@@ -4,7 +4,7 @@ This page will help guide you through the process of creating and contributing y
 
 ## Prerequisites
 
-To be able to contribute your own provider for this project you are required to have extensive knowledge with [TypeScript](https://www.typescriptlang.org). In order to get your workspace ready you will need to follow the steps in [`CONTRIBUTING.md`](.github/CONTRIBUTING.md).
+To be able to contribute your own provider for this project you are required to have extensive knowledge with [TypeScript](https://www.typescriptlang.org). In order to get your workspace ready you will need to follow the steps in [`CONTRIBUTING.md`](https://github.com/josh-development/providers/blob/main/.github/CONTRIBUTING.md).
 
 ## Getting Started
 
